# embedded-frontend-canister

./: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  dfx.json  frontend_canister.wasm
frontend/: package-lock.json  size-plugin.json
frontend/src/routes/home/: index.js
rs/: Cargo.toml
rs/src/: assets.rs  frontend_canister.did  lib.rs
